--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css\bootstrap.css">
     <link rel="stylesheet" href="css\bootstrap-grid.css">
     <link rel="stylesheet" href="css/estilo.css">
-    <title>Bootstrap demo</title>
+    <title>Bootstrap Demo</title>
 </head>
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
