--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
         <div class="carousel-item active">
             <img src="img/Carousel/jv1.jpg" class="d-block w-100" alt="jv1">
             <div class="carousel-caption d-none d-md-block">
-                <h5 class="sombra">First slide label</h5>
-                <p class="sombra">Some representative placeholder content for the first slide.</p>
+                <h5 class="sombra">Jogos Vorazes</h5>
+                <p class="sombra">Jogos Vorazes é, então, uma grande crítica a opressão, a alienação, a desigualdade e uma observância que esse próprio sistema é o causador da necessidade de seu fim.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="img/Carousel/jv2.jpg" class="d-block w-100" alt="jv2">
             <div class="carousel-caption d-none d-md-block">
-                <h5 class="sombra">Second slide label</h5>
-                <p class="sombra">Some representative placeholder content for the second slide.</p>
+                <h5 class="sombra">Katniss Everdeen</h5>
+                <p class="sombra">É a protagonista da história. Ela tem dezesseis anos e vive na área mais pobre do Distrito 12, conhecida como Costura ou Jazigo, com sua mãe e sua irmã de doze anos, Primrose, apelidada de Prim.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="img/Carousel/jv3.jpg" class="d-block w-100" alt="jv3">
             <div class="carousel-caption d-none d-md-block">
-                <h5 class="sombra">Third slide label</h5>
-                <p class="sombra">Some representative placeholder content for the third slide.</p>
+                <h5 class="sombra">Sobre</h5>
+                <p class="sombra">É um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos escrito pela norte-americana Suzanne Collins.</p>
             </div>
         </div>
     </div>
@@ -93,12 +93,68 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-
 <body>
+    <main class="container-md">
+        <section>
+            <h1>Sobre</h1>
+            <div>
+                <p>Jogos Vorazes é um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos escrito pela norte-americana Suzanne Collins. O primeiro de uma trilogia que leva seu nome foi originalmente publicado nos Estados Unidos, em 14 de setembro de 2008, pela editora Scholastic, e lançado em Portugal e no Brasil, respectivamente, em 20 de outubro de 2009, pela Editorial Presença, e 29 de maio 2010, pela editora Rocco.</p>
+                <p>O livro foi lançado também como audiolivro e livro digital. Teve uma primeira edição de 50 mil exemplares nos Estados Unidos, mais tarde aumentada para 200 mil. Desde o seu lançamento, foi traduzido para 26 idiomas diferentes e teve os seus direitos vendidos para 38 países.</p>
+            </div>
+        </section>
+        <section>
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                      Livros
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                    <div class="accordion-body">
+                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <section>
 
+        </section>
+        <section>
+
+        </section>
+    </main>
 
     <!--<script src="js\bootstrap.js"></script>-->
     <script src="js\bootstrap.bundle.js"></script>
 </body>
+<footer>
+    <p>Desenvolvido por Guilherme Nakamura Carvalho</p>
+</footer>
 
 </html>
