--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <script src="js\bootstrap.bundle.js"></script>
 </body>
 <footer>
-    <p>Desenvolvido por Guilherme Nakamura Carvalho</p>
+    <p>Desenvolvido por Guilherme Nakamura Carvalho~</p>
 </footer>
 
 </html>
