--- a/index.html
+++ b/index.html
@@ -66,21 +66,25 @@
             <img src="img/Carousel/jv1.jpg" class="d-block w-100" alt="jv1">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="sombra">Jogos Vorazes</h5>
-                <p class="sombra">Jogos Vorazes é, então, uma grande crítica a opressão, a alienação, a desigualdade e uma observância que esse próprio sistema é o causador da necessidade de seu fim.</p>
+                <p class="sombra">Jogos Vorazes é, então, uma grande crítica a opressão, a alienação, a desigualdade e
+                    uma observância que esse próprio sistema é o causador da necessidade de seu fim.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="img/Carousel/jv2.jpg" class="d-block w-100" alt="jv2">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="sombra">Katniss Everdeen</h5>
-                <p class="sombra">É a protagonista da história. Ela tem dezesseis anos e vive na área mais pobre do Distrito 12, conhecida como Costura ou Jazigo, com sua mãe e sua irmã de doze anos, Primrose, apelidada de Prim.</p>
+                <p class="sombra">É a protagonista da história. Ela tem dezesseis anos e vive na área mais pobre do
+                    Distrito 12, conhecida como Costura ou Jazigo, com sua mãe e sua irmã de doze anos, Primrose,
+                    apelidada de Prim.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="img/Carousel/jv3.jpg" class="d-block w-100" alt="jv3">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="sombra">Sobre</h5>
-                <p class="sombra">É um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos escrito pela norte-americana Suzanne Collins.</p>
+                <p class="sombra">É um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos
+                    escrito pela norte-americana Suzanne Collins.</p>
             </div>
         </div>
     </div>
@@ -93,62 +97,134 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
 <body>
     <main class="container-md">
         <section>
-            <h1>Sobre</h1>
+            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                <h1>Sobre</h1>
+            </div>
             <div>
-                <p>Jogos Vorazes é um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos escrito pela norte-americana Suzanne Collins. O primeiro de uma trilogia que leva seu nome foi originalmente publicado nos Estados Unidos, em 14 de setembro de 2008, pela editora Scholastic, e lançado em Portugal e no Brasil, respectivamente, em 20 de outubro de 2009, pela Editorial Presença, e 29 de maio 2010, pela editora Rocco.</p>
-                <p>O livro foi lançado também como audiolivro e livro digital. Teve uma primeira edição de 50 mil exemplares nos Estados Unidos, mais tarde aumentada para 200 mil. Desde o seu lançamento, foi traduzido para 26 idiomas diferentes e teve os seus direitos vendidos para 38 países.</p>
+                <p>Jogos Vorazes é um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos
+                    escrito pela norte-americana Suzanne Collins. O primeiro de uma trilogia que leva seu nome foi
+                    originalmente publicado nos Estados Unidos, em 14 de setembro de 2008, pela editora Scholastic, e
+                    lançado em Portugal e no Brasil, respectivamente, em 20 de outubro de 2009, pela Editorial Presença,
+                    e 29 de maio 2010, pela editora Rocco.</p>
+                <p>O livro foi lançado também como audiolivro e livro digital. Teve uma primeira edição de 50 mil
+                    exemplares nos Estados Unidos, mais tarde aumentada para 200 mil. Desde o seu lançamento, foi
+                    traduzido para 26 idiomas diferentes e teve os seus direitos vendidos para 38 países.</p>
             </div>
         </section>
         <section>
             <div class="accordion" id="accordionPanelsStayOpenExample">
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                      Livros
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            Jogos Vorazes I
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                        <div class="accordion-body">
+                            Nele, vamos conhecer Katniss que se oferece para ir aos jogos no lugar da irmã mais nova Prim havia sido sorteada (a nossa protagonista é a primeira a se voluntariar como tributo no seu distrito). Peeta é sorteado no Dia da Colheita para ir junto com ela, os dois representando o empobrecido Distrito 12.
+                            <br>Aos poucos você vai sendo apresentado aos personagens dos outros 11 distritos e vai os conhecendo mais a fundo, mas sem nunca saber quem está do lado de Katniss e quem está contra ela. 
+                            <br>Por fim, no meio desse reality sangrento somos apresentados a uma cena de catarse romântica e aclamação popular que pode ter o poder de mudar os jogos para sempre. 
+                        </div>
                     </div>
-                  </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Jogos Vorazes II: Em Chamas
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Agora, Peeta e Katniss são vistos como heróis por grande parte da população de Panem e um clima de revolução começa a se instalar no ar. Aqui e ali, distúrbios e agitações nos distritos dão sinais de que uma revolta é iminente. Esse livro também representa o começo da libertação do Tordo (pássaro símbolo de Katniss) e já começa a haver uma associação do símbolo com a nossa personagem.
+                            <br>Com o final romântico dos jogos, o governo da Capital sente que foi feito de trouxa e prepara um contra-ataque para tentar acabar com o casal apaixonado. 
+                            <br>Ao mesmo tempo que vimos o casal ser alçado a nível de celebridade, também vemos uma Katniss confusa que se pega cada vez pensando mais em Gale, como se uma nova paixão estivesse nascendo. 
+                        </div>
                     </div>
-                  </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                      Accordion Item #3
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            Jogos Vorazes III: A Esperança
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            A capa é bem sugestiva e vemos o tordo livre e voando. Da mesma forma veremos Katniss se liberando e promovendo a revolução. 
+                            <br>A coragem de Katniss nos jogos fez nascer a esperança em um país disposto a fazer de tudo para se livrar da opressão. Ela virou um símbolo, o Tordo. 
+                            <br>Agora ela precisa assumir seu lugar de líder dos rebeldes, e sabe que o sucesso da revolução virá da sua aceitação em ser a personificação da revolta. Além disso a chegada dos rebeldes de um lendário distrito 13 põe ainda mais fogo na nascente revolução. 
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Jogos Vorazes IV: A cantiga dos pássaros e das serpentes
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Esse é um spin-off da saga principal e pode ser considerado o quarto volume da ordem dos livros de Jogos Vorazes.  
+                            <br>Note no entando que em ordem temporal os acontecimentos desse livro antecedem a história de Katniss (cerca de 54 anos antes).
+                            <br>Previamente, a família de Snow era outrora rica no distrito 13 que ficou inabitável. Ele vê a vida da família desabar e ter que reconstruí-la na Capital.
+                            <br>Agora vamos acompanhar a história pelo ponto de vista de Coriolanus Snow que está se preparando para ser mentor da décima edição dos Jogos Vorazes. A escola que ele frequenta foi selecionada para transformar os jogos em um grande espetáculo, pois naquela época pouca gente se interessava por eles. Ele será mentor de Lucy Grey e a relação deles transcenderá os jogos. 
+                            <br>Outro ponto muito interessante do livro é ver os jogos na perspectiva de um mentor, não de um tributo o que nos dá mais um ângula à história. 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
 
         </section>
-        <section>
 
-        </section>
     </main>
+
 
     <!--<script src="js\bootstrap.js"></script>-->
     <script src="js\bootstrap.bundle.js"></script>
