--- a/index.html
+++ b/index.html
@@ -186,12 +186,45 @@
             </div>
         </section>
         <section>
+            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                <h1>Personagens</h1>
+            </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/img cards/katniss.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Jenny</h5>
+                        <h5 class="card-title">Katniss Everdeen</h5>
+                        <p class="card-text">É a protagonista da história. Ela tem dezesseis anos e vive na área mais pobre do Distrito 12, conhecida como Costura ou Jazigo, com sua mãe e sua irmã de doze anos, Primrose, apelidada de Prim.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/img cards/Peeta.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Peeta Mellark</h5>
+                        <p class="card-text">É o tributo masculino do Distrito 12. Tem dezesseis anos, é filho de um padeiro e vive na parte média do seu distrito. Tem cabelos loiros e olhos azuis, além de ser muito forte.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/img cards/Haymitch.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Haymitch Abernathy</h5>
+                        <p class="card-text">É o mentor de Peeta Mellark e Katniss Everdeen, e o tributo vencedor da 50ª edição dos Jogos Vorazes. Assim sendo no primeiro livro, o único tributo vencedor do Distrito 12 ainda vivo distrito.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/img cards/Gale.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Gale Hawthorne</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -199,9 +232,9 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/img cards/Effie.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Effie Trinket</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -209,9 +242,9 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/img cards/Primrose.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Primrose Everdeen</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -220,7 +253,45 @@
             </div>
         </section>
         <section>
-
+            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                <h1>Distritos</h1>
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 1 ou a Capital</a>,comada Panem inteira, onde se localizam as pessoas mais ricas do país, incluindo o presidente(a).
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 2</a>, é o mais leal à Capital.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 3</a>, tem habilidades com engenharia e tecnologia.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 4</a>, é responsável pela comida de Panem.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 5</a>, é o maior produtor de energia de Panem.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 6</a>, é um grande produtor de remédios.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 7</a>, é especializado pela carpintaria.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 8</a>, é espeicalizado na área têxtil.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 9</a>, é a região industrializada, onde processa diversos recursos feitos de outras regiões do país.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 10</a>, é a região rural de Panem.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 11</a>, é a região agrícola do país.
+            </div>
+            <div class="alert alert-info" role="alert">
+                O <a href="#" class="alert-link">Distrito 12</a>, é especializado na energia nuclear.
+            </div>
         </section>
 
     </main>
@@ -230,7 +301,7 @@
     <script src="js\bootstrap.bundle.js"></script>
 </body>
 <footer>
-    <p>Desenvolvido por Guilherme Nakamura Carvalho~</p>
+    <p class="foot">Desenvolvido por Guilherme Nakamura Carvalho</p>
 </footer>
 
 </html>
