--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
                 <h1>Sobre</h1>
             </div>
-            <div>
+            <div class="parag">
                 <p>Jogos Vorazes é um livro de aventura, ação, distópico e pós-apocalíptico para jovens e adultos
                     escrito pela norte-americana Suzanne Collins. O primeiro de uma trilogia que leva seu nome foi
                     originalmente publicado nos Estados Unidos, em 14 de setembro de 2008, pela editora Scholastic, e
