--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     <script src="js\bootstrap.bundle.js"></script>
 </body>
 <footer>
-    <p class="foot">Desenvolvido por Guilherme Nakamura Carvalho</p>
+    <p class="foot">Desenvolvido por Guilherme Nakamura Carvalho.</p>
 </footer>
 
 </html>
