--- a/index.html
+++ b/index.html
@@ -23,45 +23,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Livros</a>
+                            <a class="nav-link" href="livros.html">Livros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Autores</a>
+                            <a class="nav-link" href="autora.html">Autora</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Distritos</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Personagens
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Katniss Everdeen</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Peeta Mellark</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Haymitch Abernathy</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Gale Hawthorne</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Effie Trinket</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Primrose Everdeen</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Personagens</a>
                         </li>
                     </ul>
                 </div>
