--- a/autora.html
+++ b/autora.html
@@ -58,7 +58,7 @@
             </section>
             <section id="galeria">
                 <div class="row col-md-12">          
-                    <h1 class="text-center">Imagens Primeira Temporada</h1>                                      
+                    <h1 class="text-center">Suzanne Collins</h1>                                      
                 </div>
         
                 <div class="text-center">
@@ -70,7 +70,7 @@
                   <div class="row espacoabaixo">
                     <div class="col-md-4 espacoabaixo"><img class="espaco" src="img/img autora/img4" alt="" srcset=""></div>
                     <div class="col-md-4 espacoabaixo"><img class="espaco" src="img/galeria/galer6.jpg" alt="" srcset=""></div>
-                    <div class="col-md-4 espacoabaixo"><img class="espaco" src="img/galeria/galer6.png" alt="" srcset=""></div>
+                    <div class="col-md-4 espacoabaixo"><img class="espaco" src="img/img autora/img6.jpg" alt="" srcset=""></div>
                   </div>          
                 </div>
             </section>
