--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css\bootstrap.css">
         <link rel="stylesheet" href="css\bootstrap-grid.css">
         <link rel="stylesheet" href="css/estilo.css">
-        <title>Bootstrap Demo</title>
+        <title>Jogos Vorazes</title>
     </head>
     <header>
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="autora.html">Autora</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Distritos</a>
+                            <a class="nav-link" href="distritos.html">Distritos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Personagens</a>
@@ -293,16 +293,16 @@
                     </div>
                     <div class="col-md-6">
                         <div class="alert alert-info" role="alert">
-                            <a href="#" class="alert-link">Fire Proof: Shelby Woo #11 </a>(1999)
+                            <a target="_blank" href="https://www.google.com.br/books/edition/Fire_Proof/SE9GQiFFJ6EC?hl=pt-BR&gbpv=0&bsq=Fire%20Proof:%20Shelby%20Woo%20%2311" class="alert-link">Fire Proof: Shelby Woo #11 </a>(1999)
                         </div>
                         <div class="alert alert-info" role="alert">
-                            <a href="#" class="alert-link">O dia em que Caco Botão Ficou Sem Energia </a>(Rocco, 2019)
+                            <a target="_blank" href="https://www.google.com.br/books/edition/O_dia_em_que_Caco_Bot%C3%A3o_ficou_sem_energ/KMeSDwAAQBAJ?hl=pt-BR&gbpv=0" class="alert-link">O dia em que Caco Botão Ficou Sem Energia </a>(Rocco, 2019)
                         </div>
                         <div class="alert alert-info" role="alert">
-                            <a href="#" class="alert-link">When Charlie McButton Gained Power </a>(2007)
+                            <a target="_blank" href="https://www.google.com.br/books/edition/When_Charlie_McButton_Lost_Power/baIrpW5S8M8C?hl=pt-BR&gbpv=0" class="alert-link">When Charlie McButton Gained Power </a>(2007)
                         </div>
                         <div class="alert alert-info" role="alert">
-                            <a href="#" class="alert-link">Um ano na Selva </a>(Rocco, 2015)
+                            <a target="_blank" href="https://www.google.com.br/books/edition/Um_ano_na_selva/OzT1zwEACAAJ?hl=pt-BR" class="alert-link">Um ano na Selva </a>(Rocco, 2015)
                         </div>
                     </div>
                 </div>
