--- a/autora.html
+++ b/autora.html
@@ -24,16 +24,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Livros
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#TopAut1">Suzanne Marie Collins</a></li>
-                                <li><a class="dropdown-item" href="#TopAut2">Jogos Vorazes II: Em Chamas</a></li>
-                                <li><a class="dropdown-item" href="#TopAut3">Jogos Vorazes III: A Esperança</a></li>
-                                <li><a class="dropdown-item" href="#TopAut4">Jogos Vorazes IV: A Cantiga dos Pássaros e das Serpentes</a></li>
-                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -57,15 +47,11 @@
                 </div>
             </section>
             <section id="galeria">
-                <div class="row col-md-12">          
-                    <h1 class="text-center">Suzanne Collins</h1>                                      
-                </div>
-        
                 <div class="text-center">
                   <div class="row">
                     <div class="col-md-4 espacoabaixo"><img class="espaco" src="img/img autora/img1.jpg" alt=""></div>
                     <div class="col-md-4 espacoabaixo"><img class="espaco"  src="img/img autora/img2.jpg" alt="" srcset=""></div>
-                    <div class="col-md-4 espacoabaixo"><img class="espaco"  src="img/img autora/img3" alt="" srcset=""></div>
+                    <div class="col-md-4 espacoabaixo"><img class="espaco"  src="img/img autora/img3.jpg" alt="" srcset=""></div>
                   </div>
                   <div class="row espacoabaixo">
                     <div class="col-md-4 espacoabaixo"><img class="espaco" src="img/img autora/img4" alt="" srcset=""></div>
