--- a/distritos.html
+++ b/distritos.html
@@ -54,10 +54,194 @@
     <body>
         <main class="container-md">
             <section>
-                
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist1.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 1</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 1: Artigos de Luxo.</p>
+                                <p>A Capital se situa na cidade que hoje conhecemos como Denver. É uma fortaleza de gente rica e poderosa, de onde os jogos e os distritos são controlados por um governo ditatorial.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist2.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 2</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 2: Alvenaria e Armamentos.</p>
+                                <p>Um dos distritos mais ricos da nação, ele oferece pedras preciosas e artigos de luxo para a Capital, com a qual faz fronteira. Seus habitantes são, aliás, batizados com os nomes desses artigos, como Glimmer e Marvel. O lugar treina suas crianças desde cedo para os Jogos Vorazes, apesar de a prática ser ilegal.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist3.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 3</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 3: Tecnologia. Considerado um dos distritos mais rebeldes, atualmente fornece todo o material científico e tecnológico.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist4.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 4</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 4: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist5.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 5</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 5: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist6.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 6</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 6: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist7.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 7</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 7: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist8.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 8</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 8: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist9.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 9</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 9: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist10.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 10</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 10: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist11.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 11</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 11: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="D1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img class="imglivro" src="img/img distritos/dist12.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
+                                <h1>Distrito 12</h1>
+                            </div>
+                            <div class="textlivro">
+                                <p>Distrito 12: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
         </main>
 
         <script src="js\bootstrap.bundle.js"></script>
     </body>
+    <footer>
+        <p class="foot">Desenvolvido por Guilherme Nakamura Carvalho</p>
+    </footer>
 </html>
